--- a/readme.html
+++ b/readme.html
@@ -1,1 +1,9 @@
 ### Sidebar Widget showing recommended posts.
+
+- The default theme used is called twentytwenty
+- Sidebar functionality has been implemented in the ../themes/twentytwenty/template-parts/content.php file
+- The widget was created in a module called "ng_widget_sdebar"
+- The solution for optimizing a number of 2000 items in that sidebar is a ajax call when the scoll reaches the sidebar bottom.
+- The displayed item limit (mysql limit) can be set in the ../plugins/ng_widget_sdebar/template/public/widget_posts.tpl.php file
+- In the root of the project there is a folder called feed that contains three .php files for populating the database with post type
+- The working environment was local (http://localhost/wp_sidebar_test)
