--- a/readme.html
+++ b/readme.html
@@ -7,3 +7,4 @@
 - The displayed item limit (mysql limit) can be set in the ../plugins/ng_widget_sdebar/template/public/widget_posts.tpl.php file
 - In the root of the project there is a folder called feed that contains three .php files for populating the database with post type
 - The working environment was local (http://localhost/wp_sidebar_test)
+- The database is exported to the root folder and is called "wp_sidebar_test.sql"
